# meta-agent

./: .gitignore  README.md  instance1_config.json  instance2_config.json  pyproject.toml  run-meta-agent.sh  run-metaagent.sh  run_single_thread.py  run_two_theads.py  sync_script.py  thread_client_config.json  thread_master_config.json
config/: server_mode.json
metaagent_script_flask/: daemon_service.py  main.py  run_single_thread.py  run_two_theads.py  sync_script.py  sync_service.py
