[tool.poetry]
name = "metaagent-script-flask"
version = "0.1.0"
description = ""
authors = ["0xMichaelRan <michaelran16@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
requests = "^2.32.3"
watchdog = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
